# Homework.AQA

./: .gitignore  README.md
13.homework/: task_1_remove_duplicates.py  task_2_validate_json.py  task_3_find_in_xml.py
14.homework/: __init__.py  task.14.1.py
15.homework/: task.15.1.py
16.homework/: __init__.py  run_tests.py  task_16_1.py  task_16_2.py  test_task_16_1.py  test_task_16_2.py
17.homework/randominfo-master/: setup.cfg  setup.py  test.py
17.homework/randominfo-master/randominfo/: __init__.py
18.homework/: task.18.py
19.homework/task_19_1/: mars_photos.py
21.homework/: analyze_log.py
22.homework/: create_data.py  models.py  queries.py  university.db  update_delete.py
24.homework/: cars_app.py  test_cars_app.py
25.homework/: README.md  locators.py  test_locators.py
26.homework/: conftest.py  dz_frame1.html  dz_frame2.html  logger_setup.py  test_frames.py
27.homework/: driver.py  logger.py  test_tracking.py  tracking_page.py
29.homework/: Dockerfile  README.md  docker-compose.yml  requirements.txt
30.homework/: Dockerfile  README.md  requirements.txt
31.homework/: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  jenkins-docker-compose.yml  requirements.txt  test-results.xml
32.homework/: Jenkinsfile  README.md  docker-compose.yml
homework.13/: task_1_remove_duplicates.py  task_2_validate_json.py  task_3_find_in_xml.py
homework.13.1/: task_1_remove_duplicates.py  task_2_validate_json.py  task_3_find_in_xml.py
homework.13.2/: task_1_remove_duplicates.py  task_2_validate_json.py  task_3_find_in_xml.py
(+383 files in other folders)
