[metadata]
name = randominfo
version = 2.0.2
description = Random data generator for IDs, names, emails, passwords, dates, numbers, addresses, images, OTPs etc. for dummy entries.
description-file = README.md
author = Bhuvan Gandhi
author_email = bhuvan12501@gmail.com
long_description_content_type = text/markdown
url = https://github.com/bmg02/randominfo
download_url = https://github.com/bmg02/randominfo/dist/randominfo-2.0.2.tar.gz
python_requires = >=3.6

[options]
packages = randominfo

[options.package_data]
randominfo =
    data.csv
    images/people/*.jpg

[options.install_requires]
pillow >= 5.4.1
pytz >= 2018.5

[options.classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent